DSA jupyter notebook

--- a/dsa.ipynb
+++ b/dsa.ipynb
@@ -68,16 +68,7 @@
     "            'last_date': last_date,\n",
     "            'estimate_gamma': estimate_gamma,\n",
     "            'ifsmooth': ifsmooth,\n",
-    "            'ifMPI': ifMPI}\n",
-    "\n",
-    "laplace_dict = {'datafile': datafile,\n",
-    "                'location': 'Ohio',\n",
-    "                'plot_folder': plot_folder,\n",
-    "                'ifMPI': ifMPI,\n",
-    "                'last_date': last_date,\n",
-    "                'estimate_gamma': estimate_gamma,\n",
-    "                'ifsmooth': ifsmooth}\n",
-    "\n"
+    "            'ifMPI': ifMPI}\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -112,11 +103,7 @@
     "f = open(os.path.join(data_folder,fname),\"wb\")\n",
     "pickle.dump(dsa_dict,f)\n",
     "f.close()\n",
-    "\n",
-    "fname = 'laplace_dict' + today.strftime(\"%m%d\") + '.pkl'\n",
-    "f = open(os.path.join(data_folder,fname),\"wb\")\n",
-    "pickle.dump(laplace_dict,f)\n",
-    "f.close()\n"
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
