--- a/dsa.ipynb
+++ b/dsa.ipynb
@@ -110,31 +110,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.system('python DSA.py')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "pycharm": {
@@ -143,7 +118,8 @@
    },
    "outputs": [],
    "source": [
-    "\n"
+    "%%bash \n",
+    "python DSA.py\n"
    ]
   }
  ],
