--- a/dsa.ipynb
+++ b/dsa.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib notebook"
+    "import os"
    ]
   },
   {
@@ -25,101 +25,28 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import os as os\n",
-    "try:\n",
-    "    import cPickle as pickle\n",
-    "except ModuleNotFoundError:\n",
-    "    import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "today = pd.to_datetime('today')\n",
-    "location = 'Ohio'  \n",
-    "datafile = 'oh_040820.csv'\n",
-    "plot_folder =  'plots'\n",
-    "estimate_gamma = False\n",
-    "ifMPI = False\n",
-    "ifsmooth = False\n",
-    "last_date = pd.to_datetime(np.datetime64('2020-04-07 00:00:00'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dsa_dict = {'datafile': datafile,\n",
-    "            'location': 'Ohio',\n",
-    "            'plot_folder': plot_folder,\n",
-    "            'last_date': last_date,\n",
-    "            'estimate_gamma': estimate_gamma,\n",
-    "            'ifsmooth': ifsmooth,\n",
-    "            'ifMPI': ifMPI}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "root_folder = os.getcwd()\n",
-    "data_folder = os.path.join(root_folder,'data')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "fname = 'dsa_dict' + today.strftime(\"%m%d\") +  '.pkl'\n",
-    "f = open(os.path.join(data_folder,fname),\"wb\")\n",
-    "pickle.dump(dsa_dict,f)\n",
-    "f.close()\n",
-    "\n"
+    "location = 'Ohio'\n",
+    "datafile = 'dummy.csv'\n",
+    "output_folder = 'plots'\n",
+    "last_date = '2020-03-22'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash \n",
-    "python DSA.py\n"
+    "command_string = 'time python DSA.py -r -d ' + datafile + ' -l ' + location + ' -o ' + output_folder + ' --final-date=' + last_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.system(command_string)\n"
    ]
   }
  ],
@@ -139,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.7"
   },
   "pycharm": {
    "stem_cell": {
