--- a/dsa_laplace.ipynb
+++ b/dsa_laplace.ipynb
@@ -11,139 +11,37 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib notebook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import os as os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "try:\n",
-    "    import cPickle as pickle\n",
-    "except ModuleNotFoundError:\n",
-    "    import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "root_folder = os.getcwd()\n",
-    "data_folder = os.path.join(root_folder,'data')\n"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "today = pd.to_datetime('today')\n",
-    "location = 'Ohio'  \n",
+    "location = 'Ohio'\n",
     "datafile = 'dummy.csv'\n",
-    "plot_folder =  'plots'\n",
-    "estimate_gamma = False\n",
-    "ifMPI = False\n",
-    "ifsmooth = False\n",
-    "last_date = pd.to_datetime(np.datetime64('2020-03-22 00:00:00'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "laplace_dict = {'datafile': datafile,\n",
-    "                'location': 'Ohio',\n",
-    "                'plot_folder': plot_folder,\n",
-    "                'ifMPI': ifMPI,\n",
-    "                'last_date': last_date,\n",
-    "                'estimate_gamma': estimate_gamma,\n",
-    "                'ifsmooth': ifsmooth}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "fname = 'laplace_dict' + today.strftime(\"%m%d\") + '.pkl'\n",
-    "f = open(os.path.join(data_folder,fname),\"wb\")\n",
-    "pickle.dump(laplace_dict,f)\n",
-    "f.close()\n"
+    "output_folder = 'plots'\n",
+    "last_date = '2020-03-22'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash \n",
-    "python DSA_Laplace.py\n"
+    "command_string = 'time python DSA_Laplace.py -r -d ' + datafile + ' -l ' + location + ' -o ' + output_folder + ' --final-date=' + last_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.system(command_string)"
    ]
   }
  ],
@@ -163,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.7"
   },
   "pycharm": {
    "stem_cell": {
